# novum-qvm

./: .gitignore  CHAT_IMPROVEMENTS.md  CONTRIBUTING.md  DEPLOYMENT_COMPLETE.md  DEPLOY_QUICK_START.md  LICENSE  MANIFEST.in  MODEL_LIMITATIONS.py  PYPI_GITHUB_SETUP.md  PyPI_GITHUB_DEPLOYMENT_READY.md  QUANTUM_CHAT_README.md  QUANTUM_NLP_PROJECT_SUMMARY.md  Quantum Natural Language Processing.html  README.md  README_DEPLOYMENT.md  START_HERE.md  TRIGRAM_ENHANCEMENT.md  benchmarks.py  build_dist.ps1  build_dist.sh  chat_improved_test.txt  chat_improved_test2.txt  chat_test_input.txt  chat_test_input2.txt  debug_gates.py  example_pfqvs.py  example_qnlp.py  inspect_puffin.py  pyproject.toml  quantum_chat.py  quick_stress_test.py  setup.cfg  setup.py  stress_test.py  test_bell_from_00.py  test_cnot_fix.py  test_deutsch_jozsa.py  test_trigram.py  trace_qnlp.py  train_on_puffin.py  (+5 more)
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
novum_qvm/: QuantumComputer.py  __init__.py  functions.py  qnlp.py  quantum_toolkit.py
tests/: __init__.py  test_pfqvs.py
