[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novum-qvm"
version = "1.2.0"
description = "Perlin-Fourier Quantum Virtual Simulation (PFQVS): Advanced quantum circuit simulator with QNLP support"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Iris Zimmerfrau"}
]
keywords = ["quantum", "computing", "simulation", "PFQVS", "QNLP", "quantum-machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "pytest-cov>=2.12", "black>=21.0", "flake8>=3.9", "build", "twine"]

[project.urls]
Homepage = "https://github.com/iriszimmerfrau-collab/novum-qvm"
Documentation = "https://github.com/iriszimmerfrau-collab/novum-qvm/wiki"
Repository = "https://github.com/iriszimmerfrau-collab/novum-qvm.git"
Issues = "https://github.com/iriszimmerfrau-collab/novum-qvm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["novum_qvm*"]
